--- a/metadata-package/tsconfig.json
+++ b/metadata-package/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "resolveJsonModule": true,
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "module": "ESNext",
+    "moduleResolution": "bundler",
     "target": "ES2022", 
     "skipLibCheck": false,
     "strict": true, 
