--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -12,40 +12,34 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
-      
+      contents: write  
+      pull-requests: write 
       id-token: write  
+    
     defaults:
       run:
         working-directory: ./metadata-package
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
           registry-url: 'https://registry.npmjs.org'
-          scope: '@arte-pt'
 
       - name: Install Dependencies
         run: npm install
 
-      - name: Build Project
-        run: npm run build
-      - name: Bump Version
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          
-           NEW_VERSION=$(node -p "require('./package.json').version")
-          
-          git add package.json
-          [ -f package-lock.json ] && git add package-lock.json
-          
-          git commit -m "chore(release): $NEW_VERSION [skip ci]"
-          git push origin main
-
-      - name: Publish to npm
-        run: npm publish --access public --provenance
+      - name: Create Release PR or Publish
+        id: changesets
+        uses: changesets/action@v1
+        with:
+          publish: npm publish --access public --provenance
+          cwd: metadata-package
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
