--- a/metadata-package/package.json
+++ b/metadata-package/package.json
@@ -35,6 +35,7 @@
   },
   "homepage": "https://github.com/amagovpt/accessmonitor-rulesets#readme",
   "devDependencies": {
+    "@changesets/cli": "^2.29.8",
     "tsup": "^8.5.1",
     "typescript": "^5.9.3"
   }
